Fix AccountCard stretch to 100% (#4450)

--- a/js/src/modals/DappPermissions/dappPermissions.css
+++ b/js/src/modals/DappPermissions/dappPermissions.css
@@ -31,8 +31,10 @@
   }
 }
 
-.selected, .unselected {
+.selected,
+.unselected {
   margin-bottom: 0.25em;
+  width: 100%;
 
   &:focus {
     outline: none;
